# OpenSwiss

./: .gitignore  README.md  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: argsort.rs  main.rs  no_na_nf64.rs  power.rs  types.rs
src/lib/: EventRun.svelte  RegPlayer.svelte  index.ts
src/routes/: +page.svelte
src/routes/Event/: +page.svelte
