[package]
name = "OpenSwiss"
version = "0.1.0"
description = "An open source tool for running swiss style competitions"
authors = ["Donut the First"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
ndarray = {version = "0.15.6", features = ["blas", "rayon", "serde"] }
blas-src = {version = "0.9.0", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "static", "cache"] }
ndarray-rand = "0.14.0"
rayon = "1.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
thiserror = "1.0.44"
conv = "0.3.3"

[dependencies.ndarray-linalg]
version = "0.16.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
